--- a/html/Iventaire.html
+++ b/html/Iventaire.html
@@ -27,8 +27,7 @@
             <div>Quantité théorique : <span id="quantite-theorique">0</span>
                 kg</div>
 
-            <label for="quantite-observGITee">Quantité réellement disponible
-                :</label>
+            <label for="quantite-observee">Quantité réellement disponible:</label>
             <input type="number" id="quantite-reelle" placeholder="Ex: 750"
                 required>
 
