--- a/html/Dashboard.html
+++ b/html/Dashboard.html
@@ -176,7 +176,7 @@
             </div>
 
         </div>
-        <script src="../js/sessionStorage.js"></script>
+        <script></script>
         <script src="../js/notifications.js"></script>
         <script src="../js/utilisateurs.js"></script>
         <script>
