--- a/html/sortie.html
+++ b/html/sortie.html
@@ -13,7 +13,8 @@
 
   <body>
     <textarea class="field-sortie editable-field"></textarea>
-    <div class="role-label"></div>
+    <div id="role-label" class="role-badge"></div>
+
     <div id="sidebar-container"></div>
     <div class="main">
       <h1>Gestion des Sorties de Stock</h1>
@@ -69,6 +70,12 @@
 
       <canvas id="motif-chart"></canvas>
       <div class="selection">
+        <select id="periode-selector" style="margin-bottom: 10px;">
+          <option value="7">7 jours</option>
+          <option value="30" selected>30 jours</option>
+          <option value="90">90 jours</option>
+        </select>
+
         <select id="produit-selector" aria-placeholder="select"></select>
       </div>
       <div id="chart-section">
