--- a/html/sidebard.html
+++ b/html/sidebard.html
@@ -30,6 +30,8 @@
                     <i class="fas fa-clipboard-list text-secondary"></i>
                     Inventaire et Plan
                 </a>
+                <a href="parametres.php"><i class="fas fa-cogs"></i>
+                        Paramètres</a>
             </nav>
             <button id="logout-btn">
                 <i class="fas fa-sign-out-alt"></i> Déconnexion
